Refs #14823: Removed float-clearing overflow rule on RTE field to prevent unintended cropping.

--- a/public/sites/all/themes/bridges_theme/css/browsers/ie8.css
+++ b/public/sites/all/themes/bridges_theme/css/browsers/ie8.css
@@ -648,9 +648,6 @@ div[data-type="region"][data-name="console"] .alert {
     margin-top: 80px;
   }
 }
-.field.c {
-  overflow: auto;
-}
 .field.c .lead {
   font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
   font-size: 18px;
