--- a/public/sites/all/themes/bridges_theme/css/overrides/rte.less
+++ b/public/sites/all/themes/bridges_theme/css/overrides/rte.less
@@ -1,6 +1,4 @@
 .field.c {
-  overflow: auto;
-
   .lead {
     font-family: @font-family-sans-serif;
     .font-size(18, 1.4);
